--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,8 +8,8 @@
     <title>Formulário</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
 
+<body>
     <div>
         <h1 id="titulo">Cadastro de calouros</h1>
         <p id="subtitulo">Preencha suas informações</p>
@@ -17,7 +18,7 @@
 
     <form>
         <fieldset class="grupo">
-            <div>
+            <div class="campo">
                 <label for="nome"><strong>Nome</strong></label>
                 <input type="text" name="nome" id="nome" required>
             </div>
@@ -45,7 +46,7 @@
 
         <div class="campo">
             <label for="campus
-            "><strong>Campus</strong></label>
+                "><strong>Campus</strong></label>
             <select id="campus">
                 <option selected disabled value="">Selecione</option>
                 <option>Central</option>
@@ -56,7 +57,7 @@
         </div>
 
         <fieldset class="grupo">
-            <div>
+            <div id="checkbox">
                 <label><strong>Selecione as suas áreas de interesse:</strong></label>
                 <input type="checkbox" id="interesse1" name="interesse1" value="design">
                 <label for="interesse1">Design</label>
@@ -71,7 +72,7 @@
             </div>
         </fieldset>
 
-        <div>
+        <div class="campo">
             <br>
             <label><strong>Conte-nos brevemente sobre suas experiências:</strong></label>
             <textarea name="experiencia" id="experiencia" rows="6" style="width: 26em"></textarea>
@@ -81,4 +82,5 @@
 
     </form>
 </body>
+
 </html>
